syntax = "proto3";
package proto;
option go_package = "/proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";

message Community {
  string id                            = 1;
  string owner_id                      = 2;
  string owner_username                = 3;
  string name                          = 4;
  string description                   = 5;
  string rules                         = 6;
  int32 member_count                   = 7;
  int32 post_count                     = 8;
  int32 reputation                     = 9;  // FR-455-458: sum(post_likes) + (sum(comments) Ã— 0.1)
  bool is_banned                       = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

enum PostStatus {
  POST_STATUS_UNSPECIFIED = 0;
  POST_STATUS_DRAFT       = 1;
  POST_STATUS_PUBLISHED   = 2;
}

message Post {
  string id                              = 1;
  string author_id                       = 2;
  string author_username                 = 3;
  string community_id                    = 4;
  string community_name                  = 5;
  string title                           = 6;
  google.protobuf.Struct content         = 7;  // JSON content
  PostStatus status                      = 8;
  int32 like_count                       = 9;
  int32 comment_count                    = 10;
  bool is_liked_by_me                    = 11;
  bool is_bookmarked_by_me               = 12;
  google.protobuf.Timestamp published_at = 13;
  google.protobuf.Timestamp created_at   = 14;
  google.protobuf.Timestamp updated_at   = 15;
}

message MediaAttachment {
  string url       = 1;
  string type      = 2;  // image, video, audio, gif
  int64 size_bytes = 3;
}

message Comment {
  string id                            = 1;
  string post_id                       = 2;
  string author_id                     = 3;
  string author_username               = 4;
  string author_avatar                 = 5;
  string text                          = 6;
  optional string parent_comment_id    = 7;
  repeated MediaAttachment attachments = 8;
  int32 like_count                     = 9;
  bool is_liked_by_me                  = 10;
  bool is_edited                       = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

enum CommentEventType {
  COMMENT_EVENT_TYPE_UNSPECIFIED = 0;
  COMMENT_EVENT_TYPE_CREATED     = 1;
  COMMENT_EVENT_TYPE_UPDATED     = 2;
  COMMENT_EVENT_TYPE_DELETED     = 3;
}

message CommentEvent {
  CommentEventType event_type         = 1;
  Comment comment                     = 2;
  google.protobuf.Timestamp timestamp = 3;
}

message UserProfile {
  string id                            = 1;
  string username                      = 2;
  string avatar_url                    = 3;
  string banner_url                    = 4;
  string description                   = 5;
  int32 reputation                     = 6;
  int32 follower_count                 = 7;
  int32 following_count                = 8;
  bool is_banned                       = 9;
  bool is_following                    = 10;  // if current user follows this user
  bool is_online                       = 11;  // online if last_activity < 5 minutes (FR-464)
  google.protobuf.Timestamp created_at = 12;
}

message CurrentUserProfile {
  string id                            = 1;
  string username                      = 2;
  string email                         = 3;
  bool email_verified                  = 4;
  string avatar_url                    = 5;
  string banner_url                    = 6;
  string description                   = 7;
  int32 reputation                     = 8;
  int32 follower_count                 = 9;
  int32 following_count                = 10;
  int32 joined_communities_count       = 11;
  int32 active_sessions_count          = 12;
  google.protobuf.Timestamp created_at = 13;
}

message UserStatistics {
  int32 total_posts          = 1;
  int32 total_comments       = 2;
  int32 total_likes_received = 3;
  int32 post_likes           = 4;
  int32 comment_likes        = 5;
  int32 communities_created  = 6;
  int32 communities_joined   = 7;
}
